# java_serial_demo_with_javafx

./: .gitignore  README.md  pom.xml
src/main/Resource/: style.css
src/main/cpp/: CMakeLists.txt  yizheneng_Driver_SerialPort.cpp  yizheneng_Driver_SerialPort.h  yizheneng_Utils_JniLogger.cpp  yizheneng_Utils_JniLogger.h
src/main/cpp/Driver/Serial/: serial.cc
src/main/cpp/Driver/Serial/impl/list_ports/: list_ports_linux.cc
src/main/cpp/Utils/: ElapsedTimer.cpp  ElapsedTimer.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h
src/main/java/sample/: Main.java  MainPane.java  MainScene.java
src/main/java/serialPortTool/: CenterPane.kt  LeftPane.kt  Main.kt  MainPane.kt  MainScene.kt  Serial.kt  TitlePane.kt
src/main/java/yizheneng/Driver/: SerialPort.java
src/main/java/yizheneng/Utils/: HexTools.java  JniLogger.java
